--- a/app/globals.css
+++ b/app/globals.css
@@ -44,3 +44,12 @@ body {
   color: var(--foreground);
   font-family: var(--font-space-grotesque);
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-darker-grotesque);
+}
